--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,8 +28,10 @@ spring:
 
     servlet:
       multipart:
+        enabled: true
         max-file-size: 300MB
         max-request-size: 300MB
+
     resources:
       static-locations: classpath:static/,file:static/
 
